--- a/styles/NavBar.module.scss
+++ b/styles/NavBar.module.scss
@@ -18,7 +18,7 @@
     font-family: Merienda;
     box-sizing: border-box;
     padding: 1rem;
-    
+    z-index: 100000;
     position: sticky;
     top:0;
     display: flex;
