--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,12 +1,14 @@
 html,
 body {
     width: 100vw;
-    max-width: 100vw;
-    margin: 0;
+    max-width: 1800px;
+    max-width: 100%;
+    margin: 0 auto;
     padding: 0;
     border: 0;
     position: relative;
-    overflow-x: hidden;
+    display: flex;
+    flex-flow:column;
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
