--- a/styles/NavBar.module.scss
+++ b/styles/NavBar.module.scss
@@ -25,8 +25,8 @@
     align-items: center;
     font-size: 2rem;
     z-index: 20;
-    background-color: #2e309b;
     color: white;
+background-color: #303f9f;   
 }
 
 
