--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,15 +1,22 @@
 html,
 body {
     width: 100vw;
-    max-width: 1800px;
     max-width: 100%;
+   
     margin: 0 auto;
     padding: 0;
     border: 0;
     position: relative;
-    display: flex;
-    flex-flow:column;
+    
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+@media screen and (min-width:1800px) {
+  body{
+  max-width:1800px;
+  margin: 0 auto;
+  padding: 0;
+  border: 0;
+  }
 }
 
 a {
@@ -19,4 +26,11 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.smallNavBar{
+  background: rgb(0,101,163);
+  background: linear-gradient(90deg, rgba(0,101,163,1) 0%, rgba(0,173,238,1) 76%);  
+  box-sizing: border-box;
+  display: flex;
 }
