--- a/styles/ExploreStyles/Galery.module.scss
+++ b/styles/ExploreStyles/Galery.module.scss
@@ -251,6 +251,12 @@
     padding: 1rem 0rem;
     font-family: sans-serif;
     font-size: 1.3rem;
+    @media screen and (max-width:760px) {
+        font-size: 1rem;
+    }
+    @media screen and (max-width:500px) {
+        font-size: 0.8rem;
+    }
 }
 
 
