--- a/styles/styles.module.scss
+++ b/styles/styles.module.scss
@@ -16,8 +16,15 @@
 }
 .mySwiper {
   width: 100%;
+  margin-top: 3.6rem;
+  position: absolute;
+  top:0;
+  left:0;
+ 
+}
+.mySwiper2 {
+  width: 100%;
   height: 100%;
-  
  
 }
 
@@ -122,6 +129,14 @@
     @media screen and (max-width:700px) {
         display:none;
     }
+}
+
+.SwipPic{
+  display: block;
+  width:100%;
+  height: 100%;
+  min-height: 50vh;
+  object-fit: cover;
 }
 
 
