--- a/styles/Country/BigCard.module.scss
+++ b/styles/Country/BigCard.module.scss
@@ -61,3 +61,15 @@
     height: 100%;
     object-fit: cover;
 }
+
+
+.Button{
+    margin-top: 2rem;
+    border-radius: 1rem;
+    background-color: hsla(229, 91%, 52%, 1);
+    box-sizing: border-box;
+    padding:1rem;
+    color:white;
+    font-family: 1.5rem;
+    cursor: pointer;
+}
