--- a/styles/FeaturedTures.module.scss
+++ b/styles/FeaturedTures.module.scss
@@ -11,6 +11,7 @@
     background-position: top;
     padding-bottom: 3rem;
     background-repeat: no-repeat;
+    min-height: 550px;
 }
 
 .FeaturedTuresMain {
