--- a/styles/FilterSite.scss
+++ b/styles/FilterSite.scss
@@ -16,8 +16,12 @@
     @media screen and (min-width:700px) {
         grid-template-columns: 1fr 1fr;
     }
-background-color:darkblue;
+        background-color: #0065A3;
+
+
 }
+        
+
 
 .FilterMainSectionTwo {
     box-sizing: border-box;
