--- a/styles/Shared_styles/EmailForm.module.scss
+++ b/styles/Shared_styles/EmailForm.module.scss
@@ -29,6 +29,7 @@
     border-radius: 5px;
     padding: 20px;
     margin-top: 3rem;
+    color:black !important;
     background-color: #81d4fa;
   }
 
