--- a/styles/WP_CSS/About.module.scss
+++ b/styles/WP_CSS/About.module.scss
@@ -125,3 +125,10 @@ margin:0 auto;
 
 }
 }
+
+.ContactForm{
+    margin-top: 3rem;
+    background: rgb(0,101,163);
+    background: linear-gradient(90deg, rgba(0,101,163,1) 0%, rgba(0,173,238,1) 76%); 
+    color:white !important;
+}
