--- a/styles/Shared_styles/LetTheNumbersSpeak.module.scss
+++ b/styles/Shared_styles/LetTheNumbersSpeak.module.scss
@@ -3,11 +3,13 @@
 .LetNumbers{
     width: 100%;
     font-family: Crimson;
+    
 }
 
 .LNArticle{
     max-width: 1400px;
-    margin:0 auto;
+    margin:1rem auto;
+    
     @media screen and (min-width:1000px) {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
