--- a/styles/GeneralInfo.module.scss
+++ b/styles/GeneralInfo.module.scss
@@ -23,6 +23,12 @@
     background-size: cover;
     background-position: top;
     background-repeat: no-repeat;
+    @media screen and (min-width:1850px) {
+        min-height: 600px !important;
+       display: flex;
+       flex-direction: column;
+       justify-content: center;
+    }
 }
 
 .GeneralTitle{
