--- a/styles/List/TitleImg.module.scss
+++ b/styles/List/TitleImg.module.scss
@@ -2,11 +2,15 @@
     height: 500px;
     max-height: 60vh;
     width:100%;
-    background-color: yellow;
     position:absolute;
+    max-width: 2000px;
     top:0;
     left:0;
+    right:0;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 3.6rem;
+    
     animation: anim 1s ease forwards;
     z-index: -1;
 }
