--- a/styles/FilterSite.scss
+++ b/styles/FilterSite.scss
@@ -16,7 +16,8 @@
     @media screen and (min-width:700px) {
         grid-template-columns: 1fr 1fr;
     }
-        background-color: #0065A3;
+    background: rgb(0,101,163);
+    background: linear-gradient(90deg, rgba(0,101,163,1) 0%, rgba(0,173,238,1) 76%); 
 
 
 }
