--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,7 @@ html,
 body {
     width: 100vw;
     max-width: 100%;
-   
+    box-sizing: border-box;
     margin: 0 auto;
     padding: 0;
     border: 0;
