--- a/styles/Country/BigCard.module.scss
+++ b/styles/Country/BigCard.module.scss
@@ -2,10 +2,11 @@
     box-shadow: 0px 0px 15px 0px #000000;
     border-radius: 1rem;
     opacity: 0;
+    box-sizing: border-box;
     overflow: hidden;
     @media screen and (max-width:800px) {
         width:90%;
-        margin:2rem auto;
+        margin:1rem auto 0rem auto;
         
         max-height: 80%;
         display: grid;
@@ -13,7 +14,7 @@
     }
     @media screen and (min-width:800px) {
         width:90%;
-        margin:2rem auto;
+        margin:2rem auto 0rem auto;
         height: 500px;
         max-height: 80%;
         display: grid;
@@ -23,7 +24,7 @@
         width:80%;
         height: 500px;
         max-height: 80%;
-        margin:4rem auto;
+        margin:4rem auto 0rem auto;
         border-radius: 1rem;
         display: grid;
         grid-template-columns: repeat(3, 1fr);
