--- a/styles/FilterSite.scss
+++ b/styles/FilterSite.scss
@@ -9,6 +9,7 @@
 .FilterMain {
     width: 100%;
     display: grid;
+    position: relative;
     max-width: 100vw;
     margin-top:5rem;
     grid-template-columns: 1fr;
@@ -16,13 +17,24 @@
     @media screen and (min-width:700px) {
         grid-template-columns: 1fr 1fr;
     }
-    background: rgb(0,101,163);
-    background: linear-gradient(90deg, rgba(0,101,163,1) 0%, rgba(0,173,238,1) 76%); 
-
+       
+    background-color: rgba(0, 0, 0, 0.438);
 
 }
         
-
+.DarknessXY{
+    background-image: url('../public/Smart.png');
+    background-size: 100% 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: black;
+    position: absolute;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+    z-index: -1;
+}
 
 .FilterMainSectionTwo {
     box-sizing: border-box;
