--- a/styles/Shared_styles/Footer.module.scss
+++ b/styles/Shared_styles/Footer.module.scss
@@ -5,13 +5,11 @@
 .Footer{
     width:100%;
     position: relative; 
-    padding-top: 200px;  
     background-color: white !important;
 }
 
 .MainContainer{
-    border-style: solid;
-    border-width: 1px;    
+      
     width:100%;
     padding-top: 100px;
     color:white !important;
@@ -21,32 +19,7 @@
     background-size: 100% 100%;
 }
 
-.FooterTop{
-    position:absolute;
-    top:0;
-    left:50%;
-    transform: translate(-50%,0);
-    width:700px;
-    max-width: 90%;
-    height:200px;
-    margin-top: 100px;
-    border-radius: 1rem;
-    background-color: #ffff00;
-    
-    display: flex;
-    align-items: center;
-     box-sizing: border-box;
-     padding:1rem;
-     color:black !important;
-     box-shadow: 0px 0px 3px 0px #000000;
-     font-family: Sans Serif pro;
-     @media screen and (max-width:700px) {
-         flex-direction: column;
-     }
-     @media screen and (max-width:400px) {
-       display: none;
-    }
-}
+
 
 .TravelWithUs{
 font-size: large;
@@ -94,7 +67,7 @@ font-size: large;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: start;
     width:100%;
 }
 
