--- a/styles/WP_CSS/About.module.scss
+++ b/styles/WP_CSS/About.module.scss
@@ -47,7 +47,7 @@
     background-color: white;
     margin-top: 1rem;
     border-style: solid;
-    border-color: #c9da2a;
+    border-color: $dark_blue;
     max-width: 1050px;
     margin-left: auto;
     margin-right: auto;
