--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,5 +32,6 @@ a {
   background: rgb(0,101,163);
   background: linear-gradient(90deg, rgba(0,101,163,1) 0%, rgba(0,173,238,1) 76%);  
   box-sizing: border-box;
+  overflow-x: hidden;
   display: flex;
 }
