--- a/styles/WP_CSS/Services.module.scss
+++ b/styles/WP_CSS/Services.module.scss
@@ -21,7 +21,7 @@
     background-color: white;
     margin-top: 1rem;
     border-style: solid;
-    border-color: #c9da2a;
+    border-color: $dark_blue;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -74,5 +74,11 @@
 }
 
 
+.AboutParentMain{
+    background-image: url('../../public/MountainSecondGenR.svg');
+    background-position: top right;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
 
 
