--- a/styles/NavBar/NavBar.module.scss
+++ b/styles/NavBar/NavBar.module.scss
@@ -59,12 +59,13 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #2e309b;
-    padding: 4rem;
+    background: linear-gradient(90deg, rgba(0,101,163,1) 0%, rgba(0,173,238,1) 76%); 
+    color:white !important;    padding: 4rem;
     font-size: 1.4rem;
     color: white;
     height: 100%;
     font-family: 'Merienda';
+    overflow-y: auto;
 
     @media screen and (min-width:900px) {
     }
