--- a/styles/WP_CSS/About.module.scss
+++ b/styles/WP_CSS/About.module.scss
@@ -139,14 +139,14 @@ margin:0 auto;
 
 .ContactParent{
     background-image: url('../../public/MountainSecondGenR.svg');
-    background-position: right;
+    background-position: 100% 20%;
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: fit;
 }
 
 .AboutParentMain{
     background-image: url('../../public/MountainSecondGenR.svg');
-    background-position: right;
+    background-position: 100% 10%;
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: fit;
 }
