--- a/styles/NavBar/HorizontalMenu.module.scss
+++ b/styles/NavBar/HorizontalMenu.module.scss
@@ -1,5 +1,6 @@
 .HorizontalMenu{
     position: relative;
+    overflow:hidden;
     @media screen and (max-width:900px) {
         display: none;
     }
