--- a/styles/index.module.scss
+++ b/styles/index.module.scss
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap');
+
 .LetTheNumbers{
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
     flex-direction: column;
+    font-family: Nunito sans;
 }
