--- a/styles/FeaturedTures.module.scss
+++ b/styles/FeaturedTures.module.scss
@@ -1,19 +1,14 @@
-@font-face {
-    font-family: 'Merienda';
-    font-style: normal;
-    font-weight: 400;
-    src: url(https://fonts.gstatic.com/s/merienda/v9/gNMHW3x8Qoy5_mf8uWMFMIo.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap');
+
+
+
 .FeaturedParent{
-    background-image: url('../public/SmokeBg.svg');
     background-position: top;
     padding-bottom: 3rem;
     background-repeat: no-repeat;
     background-size: cover;
-    min-height: 550px;
    @media screen and (min-width:1850px) {
-       min-height: 600px;
+      
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -38,7 +33,7 @@
 }
 
 .h2{
-    font-family:Merienda;
+    font-family:Nunito sans;
     text-align:center;
     font-size:2rem;
     margin-top:1rem;
@@ -103,7 +98,7 @@
     color:white;
     box-sizing:border-box;
     padding:1rem;
-    font-family:sans-serif;
+    font-family:sNunito sans;;
     font-size:1.3rem;
 }
 .hoverDiv{
@@ -115,7 +110,7 @@
     z-index:20;
     display:flex;
     color:white;
-    font-family:Merienda;
+    font-family:Nunito sans;
     justify-content:center;
     align-items:center;
     font-size:2rem;
@@ -133,7 +128,7 @@
     height: 50%;
     display: flex;
     color: white;
-    font-family: Merienda;
+    font-family: Nunito sans;
     justify-content: center;
     align-items: center;
     font-size: 2rem;
