--- a/styles/FilterSite.scss
+++ b/styles/FilterSite.scss
@@ -1,10 +1,5 @@
-@font-face {
-    font-family: 'Merienda';
-    font-style: normal;
-    font-weight: 400;
-    src: url(https://fonts.gstatic.com/s/merienda/v9/gNMHW3x8Qoy5_mf8uWMFMIo.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap');
+
 
 .FilterMain {
     width: 100%;
@@ -13,12 +8,11 @@
     max-width: 100vw;
     margin-top:5rem;
     grid-template-columns: 1fr;
-
+    background-color: #EBEEF0;
     @media screen and (min-width:700px) {
         grid-template-columns: 1fr 1fr;
     }
        
-    background-color: rgba(0, 0, 0, 0.438);
 
 }
         
@@ -72,12 +66,11 @@
     }
 }
 .FilterTitle{
-    color:white;
+    color:black;
     text-align:center;
     box-sizing:border-box;
     padding:1rem;
     
-    font-family:Merienda;
     @media screen and (min-width:700px){
         grid-column-start:1;
         grid-column-end:3;
@@ -88,7 +81,6 @@
 
 
 p{
-    font-family:sans-serif;
     font-size:0.8rem;
     color:grey;
     font-weight:700;
