--- a/styles/GeneralInfo.module.scss
+++ b/styles/GeneralInfo.module.scss
@@ -1,28 +1,11 @@
 @import './SharedVariables.scss';
+@import './kompas_colors.scss';
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap');
 
-
-@font-face {
-    font-family: 'Merienda';
-    font-style: normal;
-    font-weight: 400;
-    src: url(https://fonts.gstatic.com/s/merienda/v9/gNMHW3x8Qoy5_mf8uWMFMIo.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-@font-face {
-    font-family: 'Open Sans Condensed';
-    font-style: normal;
-    font-weight: 300;
-    font-display: swap;
-    src: url(https://fonts.gstatic.com/s/opensanscondensed/v15/z7NFdQDnbTkabZAIOl9il_O6KJj73e7Ff1GhDuXMRw.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
 
 
 .GeneralMain {
-    background-image:url('../public/SmokeBg.svg');
-    background-size: cover;
-    background-position: top;
-    background-repeat: no-repeat;
+   
     @media screen and (min-width:1850px) {
         min-height: 600px !important;
        display: flex;
@@ -35,14 +18,14 @@
     display:flex;
     justify-content:center;
     align-items:center;
-    font-family:Merienda;
+    font-family:Nunito sans;;
     font-size:3rem;
 }
 .GeneralText {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: Merienda;
+    font-family: Nunito sans;;
     font-weight:600;
     font-size:1.3rem;
 }
@@ -52,14 +35,14 @@
     max-width:350px;
     width:100%;
     border-radius:1rem;
-    background-color:$mainColor;
+    background-color:$dark_blue;
     color:white;
     text-align:center;
     padding:1rem;
 }
 
 .h1 {
-    font-family: Merienda;
+    font-family: Nunito sans;;
     font-size:1.4rem;
 }
 
