--- a/styles/Shared_styles/Footer.module.scss
+++ b/styles/Shared_styles/Footer.module.scss
@@ -1,6 +1,4 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import './../kompas_colors.scss';
 
 .Footer{
     width:100%;
@@ -11,12 +9,10 @@
 .MainContainer{
       
     width:100%;
-    padding-top: 100px;
+    padding-top: 20px;
     color:white !important;
     color:blue;
-    background-image: url('../../public/Shiny.svg');
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
+    background-color: $dark_blue;
 }
 
 
@@ -26,7 +22,7 @@ font-size: large;
 }
 
 .FooterButton{
-    font-family: Poppins;
+  
     background-color: white;
     color:black;
     font-weight: 700;
