--- a/styles/styles.module.scss
+++ b/styles/styles.module.scss
@@ -1,19 +1,6 @@
 
-@font-face {
-    font-family: 'Merienda';
-    font-style: normal;
-    font-weight: 400;
-    src: url(https://fonts.gstatic.com/s/merienda/v9/gNMHW3x8Qoy5_mf8uWMLMIqK_Q.woff2) format('woff2');
-    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-}
-/* latin */
-@font-face {
-    font-family: 'Merienda';
-    font-style: normal;
-    font-weight: 400;
-    src: url(https://fonts.gstatic.com/s/merienda/v9/gNMHW3x8Qoy5_mf8uWMFMIo.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap');
+@import './kompas_colors.scss';
 .mySwiper {
   width: 100%;
   margin-top: 3.6rem;
@@ -114,10 +101,10 @@
 
 .h1{
     box-sizing:border-box;
-    background-color:darkblue;
+    background-color:$dark_blue;
     padding:1rem 1.5rem 1rem 1.5rem;
     border-radius:1rem;
-    font-family:Merienda;
+    font-family:Nunito sans;
     display:inline-block;
     @media screen and (max-width:700px){
         font-size:1rem;
