--- a/styles/globals.css
+++ b/styles/globals.css
@@ -38,3 +38,19 @@ a {
   font-size: 1rem !important;
   color:black !important;
 }
+
+.GlobalButton{
+  background-color: #5EA73C;
+  max-width: 150px;
+  box-sizing: border-box;
+  padding:0.5rem;
+  border-radius: 0.5rem;
+  font-size: 1.3rem;
+  color:white;
+  cursor: pointer;
+}
+
+
+.HoverCrnjenje:hover{
+  background-color: black !important;
+}
